k8s-config/kustomize/overlays/keel-dev/skaha/config/service-carta.yaml
apiVersion: v1
kind: Service
metadata:
  name: skaha-carta-svc-${skaha.sessionid}
  labels:
    run: skaha-carta-svc-${skaha.sessionid}
spec:
  ports:
  - port: 6901
    protocol: TCP
    name: http-connection
  - port: 5901
    protocol: TCP
    name: socket-connection
  selector:
    canfar-net-sessionID: ${skaha.sessionid}
