k8s-config/kustomize/overlays/keel-dev/skaha/config/ingress-pluto.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: skaha-pluto-ingress-${skaha.sessionid}
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-body-size: 100g
    nginx.ingress.kubernetes.io/proxy-read-timeout: 3600s
    nginx.ingress.kubernetes.io/proxy-send-timeout: 3600s
    nginx.org/proxy-read-timeout: 3600s
    nginx.org/proxy-send-timeout: 3600s
spec:
  rules:
  - host: rc-uv.canfar.net
    http:
      paths:
      - path: /pluto/${skaha.sessionid}(/|$)(.*)
        backend:
          serviceName: skaha-pluto-svc-${skaha.sessionid}
          servicePort: 1234
